fix spacing

--- a/css/messages.css
+++ b/css/messages.css
@@ -1,11 +1,8 @@
 .message {
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px 5px;
     padding-bottom: 5px;
     padding-top: 5px;
-    border-radius: 10px;
+    border-radius: 5px;
     border-color: #808080
 }
 
@@ -45,4 +42,6 @@ p {
     margin-left: 10px;
     margin-top: 1px;
     margin-bottom: 1px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
